Reduce script count

--- a/package.json
+++ b/package.json
@@ -82,17 +82,11 @@
     "test:boa": "hardhat test --config ./hardhat.config.ts test/boaspace/*.ts",
     "test:ref": "REFERENCE=true hardhat test --config ./hardhat-reference.config.ts",
     "profile": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
-    "deploy": "hardhat run --network mainnet script/deploy.ts",
-    "deploy:localnet": "hardhat run --network localnet script/deploy.ts",
-    "deploy:devnet": "hardhat run --network devnet script/deploy.ts",
-    "deploy:multicall": "hardhat run --network mainnet script/deploy_multicall.ts",
-    "deploy:multicall:localnet": "hardhat run --network localnet script/deploy_multicall.ts",
-    "check": "npx hardhat run script/check_nft.ts --network mainnet",
-    "check:localnet": "npx hardhat run script/check_nft.ts --network localnet",
-    "trade": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network mainnet",
-    "trade:localnet": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network localnet",
-    "check:trade": "npx hardhat run script/fulfill/check_fulfill_order.ts --network mainnet",
-    "check:trade:localnet": "npx hardhat run script/fulfill/check_fulfill_order.ts --network localnet",
+    "deploy": "hardhat run script/deploy.ts",
+    "deploy:multicall": "hardhat run script/deploy_multicall.ts",
+    "check-nft": "npx hardhat run script/check_nft.ts",
+    "trade": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts",
+    "check:trade": "npx hardhat run script/fulfill/check_fulfill_order.ts",
     "coverage": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "coverage:ref": "REFERENCE=true hardhat coverage --config ./hardhat-reference-coverage.config.ts --solcoverjs ./config/.solcover-reference.js",
     "lint:check": "yarn lint:check:format && yarn lint:check:solhint && yarn lint:check:eslint",
