Make scripts runnable with different env file
- Set a different env file for each chain.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -85,13 +85,17 @@
     "deploy": "hardhat run script/deploy.ts",
     "deploy:localnet": "hardhat run script/deploy.ts --network localnet",
     "deploy:devnet": "hardhat run script/deploy.ts --network devnet",
+    "deploy:marigold": "hardhat run script/deploy.ts --network marigold",
+    "deploy:marigold:localnet": "ENV_FILE=.env.marigold.localnet hardhat run script/deploy.ts --network marigoldlocalnet",
     "deploy:multicall": "hardhat run script/deploy_multicall.ts",
     "deposit:localnet": "hardhat run script/deposit_to_wboa.ts --network localnet",
     "check-nft": "npx hardhat run script/check_nft.ts",
     "trade": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts",
     "trade:localnet": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network localnet",
+    "trade:marigold:localnet": "ENV_FILE=.env.marigold.localnet npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network marigoldlocalnet",
     "check:trade": "npx hardhat run script/fulfill/check_fulfill_order.ts",
     "check:trade:localnet": "npx hardhat run script/fulfill/check_fulfill_order.ts --network localnet",
+    "check:trade:marigold:localnet": "ENV_FILE=.env.marigold.localnet npx hardhat run script/fulfill/check_fulfill_order.ts --network marigoldlocalnet",
     "coverage": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "coverage:ref": "REFERENCE=true hardhat coverage --config ./hardhat-reference-coverage.config.ts --solcoverjs ./config/.solcover-reference.js",
     "lint:check": "yarn lint:check:format && yarn lint:check:solhint && yarn lint:check:eslint",
