--- a/contracts/package.json
+++ b/contracts/package.json
@@ -83,13 +83,15 @@
     "test:ref": "REFERENCE=true hardhat test --config ./hardhat-reference.config.ts",
     "profile": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
     "deploy": "hardhat run script/deploy.ts",
-    "deploy:localnet": "hardhat run script/deploy.ts --network localnet",
+    "deploy:localnet": "ENV_FILE=.env hardhat run script/deploy.ts --network localnet",
     "deploy:devnet": "hardhat run script/deploy.ts --network devnet",
     "deploy:marigold": "hardhat run script/deploy.ts --network marigold",
     "deploy:marigold:localnet": "ENV_FILE=.env.marigold.localnet hardhat run script/deploy.ts --network marigoldlocalnet",
     "deploy:multicall": "hardhat run script/deploy_multicall.ts",
-    "deposit:localnet": "hardhat run script/deposit_to_wboa.ts --network localnet",
+    "deposit:localnet": "ENV_FILE=.env hardhat run script/deposit_to_wboa.ts --network localnet",
+    "deposit:marigold:localnet": "ENV_FILE=.env.marigold.localnet hardhat run script/deposit_to_wboa.ts --network marigoldlocalnet",
     "check-nft": "npx hardhat run script/check_nft.ts",
+    "check-nft:localnet": "ENV_FILE=.env npx hardhat run script/check_nft.ts --network localnet",
     "trade": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts",
     "trade:localnet": "npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network localnet",
     "trade:marigold:localnet": "ENV_FILE=.env.marigold.localnet npx hardhat run script/fulfill/order_seaport_erc1155_to_boa.ts --network marigoldlocalnet",
